# FileEncryptor

./: CMakeLists.txt  README.md  main.cpp
src/app/processes/: ProcessManagement.cpp  ProcessManagement.hpp  Task.hpp
test/: test1.txt  test10.txt  test100.txt  test1000.txt  test101.txt  test102.txt  test103.txt  test104.txt  test105.txt  test106.txt  test107.txt  test108.txt  test109.txt  test11.txt  test110.txt  test111.txt  test112.txt  test113.txt  test114.txt  test115.txt  test116.txt  test117.txt  test118.txt  test119.txt  test12.txt  test120.txt  test121.txt  test122.txt  test123.txt  test124.txt  test125.txt  test126.txt  test127.txt  test128.txt  test129.txt  test13.txt  test130.txt  test131.txt  test132.txt  test133.txt  (+960 more)
